--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.2.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.jakewharton:butterknife:8.1.0'
+    implementation 'com.google.dagger:dagger:2.9'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
