--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".Root.App"
+        android:name=".DI.App"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.SplashScreen"
             android:theme="@style/SplashTheme">
